--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: Tutoriais do eproc
+description: Materiais oficiais de vários Tribunais de Justiça organizado e convertido para facilitar o acesso e estudo.
